--- a/styles/css/home/header/vtex.login.css
+++ b/styles/css/home/header/vtex.login.css
@@ -218,3 +218,18 @@
     width: 90px !important;
   }
 }
+
+.googleOptionBtn .oauthLabel {
+  font-size: 0;
+  display: flex;
+
+}
+.googleOptionBtn .oauthLabel::before {
+  content: "Continue with";
+  display: inline-block;
+  font-size: 16px;
+}
+
+.googleOptionBtn .oauthProvider{
+  font-size: 16px;
+}
