--- a/styles/css/home/pdp/vtex.product-quantity.css
+++ b/styles/css/home/pdp/vtex.product-quantity.css
@@ -1,13 +1,21 @@
 .quantitySelectorContainer :global(.vtex-numeric-stepper__plus-button) {
     background: rgba(29, 39, 52, 1);
     color     : white;
+    height    : 48px;
+    width     : 40px;
 }
 
 .quantitySelectorContainer :global(.vtex-numeric-stepper__minus-button) {
     background: rgba(29, 39, 52, 1);
     color     : white;
+    height    : 48px;
+    width     : 40px;
 }
 
 .quantitySelectorContainer :global(.vtex-numeric-stepper__input) {
     background: rgba(255, 255, 255, 1);
+    height    : 48px;
+}
+.quantitySelectorContainer--pdp_quantity{
+    margin-bottom: 0;
 }
