--- a/styles/css/home/pdp/vtex.flex-layout.css
+++ b/styles/css/home/pdp/vtex.flex-layout.css
@@ -1,24 +1,13 @@
-.flexRowContent--pdp__price {
-    width: 50%;
-}
-
 .flexRow--pdp__price {
     margin-top: 20px;
 }
 
-.flexRowContent--pdp__quantity--button :global(.vtex-button) {
-    width        : 312px;
-    height       : 48px;
-    padding      : 10px;
-    border-radius: 4px;
-    border       : 1px;
-    background   : rgba(73, 42, 119, 1);
-    color        : white;
-}
 
 .flexColChild--product__gallery {
     height: 10px;
 }
+
+
 
 .flexRowContent:nth-child(odd) {
     background-color: #ffffff;
@@ -29,36 +18,68 @@
     background-color: #cccccc;
 
 }
-.flexRow--especificartion__pdp .stretchChildrenWidth{
-    display: grid;
+
+.flexRow--especificartion__pdp .stretchChildrenWidth {
+    display        : grid;
+    justify-content: left;
 }
 
-@media (max-width: 767px) {
-    .flexRowContent--pdp__price {
-        display: flex;
-    }
+.flexRowContent--pdp__price {
+    display: flex;
+    width  : 75%;
+}
+
+
+.flexRowContent--pdp__quantity--button {
+    display: flex;
+}
+
+.flexRowContent--pdp__quantity--button :global(.vtex-button) {
+    width        : 160px;
+    height       : 48px;
+    padding      : 10px;
+    border-radius: 4px;
+    background   : rgba(73, 42, 119, 1);
+    color        : white;
+}
+
+.flexRow--pdp__quantity--button :global(.vtex-flex-layout-0-x-flexRowContent--pdp__quantity--button) {
+    width: 85% !important;
+}
+
+.flexRow--especificartion__pdp :global(.vtex-flex-layout-0-x-stretchChildrenWidt) {
+    justify-content: left;
+}
+
+@media screen and (min-width: 1024px) {
+
+    .flexRow--especificartion__pdp .stretchChildrenWidth {
+        display        : grid;
+        justify-content: left;
+        margin-left: 5rem;
+    }    
 
     .flexRowContent--pdp__price {
-        width: 75%;
-    }
-
-    .flexRowContent--pdp__quantity--button {
-        display: flex;
+        width: 50%;
     }
 
     .flexRowContent--pdp__quantity--button :global(.vtex-button) {
-        width        : 160px;
+        width        : 312px;
         height       : 48px;
         padding      : 10px;
         border-radius: 4px;
+        border       : 1px;
         background   : rgba(73, 42, 119, 1);
         color        : white;
     }
 
-    .flexRow--pdp__quantity--button :global(.vtex-flex-layout-0-x-flexRowContent--pdp__quantity--button) {
-        width: 85% !important;
+    .flexCol--product__image-pdp {
+        width : 631px !important;
+        height: 650px;
+        margin: auto;
     }
-    .flexRow--especificartion__pdp :global(.vtex-flex-layout-0-x-stretchChildrenWidt){
-        justify-content: left;
+
+    .flexCol--product__information--pdp {
+        margin-left: -120px;
     }
 }
