--- a/styles/css/home/pdp/vtex.store-components.css
+++ b/styles/css/home/pdp/vtex.store-components.css
@@ -17,26 +17,10 @@
     height       : 121px;
     display      : block;
     z-index      : 16;
-    /* margin-top: 330px; */
 }
 
-/*----- contenedor de talla y color ----*/
-/* .skuSelectorItemImage :global(.vtex-store-components-3-x-frameAround) {
-    width        : 64px;
-    height       : 64px;
-    border-radius: 4px;
-    border       : 1px solid rgba(231, 231, 231, 1);
-} */
 
-/* .skuSelectorInternalBox--sku-selector--pdp {
-    width        : 40px;
-    height       : 40px;
-    border-radius: 50%;
-    margin       : inherit;
-    align-items  : flex-start
-} */
-
-.skuSelectorSubcontainer--color :global(.vtex-store-components-3-x-skuSelectorItem){
+.skuSelectorSubcontainer--color :global(.vtex-store-components-3-x-skuSelectorItem) {
     width        : 64px;
     height       : 64px;
     border-radius: 4px;
@@ -50,8 +34,15 @@
     border       : 1px solid rgba(231, 231, 231, 1)
 }
 
-
-
+.productNameContainer {
+    font-family: Lexend;
+    font-size  : 16px;
+    font-weight: 300;
+    line-height: 16.8px;
+    text-align : left;
+    width      : 328px;
+    height     : 34px;
+}
 
 @media screen and (min-width: 1024px) {
 
@@ -89,8 +80,9 @@
 
     /*---- tiene imagenes pequena */
     .carouselGaleryThumbs {
-        width : 92px;
-        height: 650px;
+        width      : 92px !important;
+        height     : 650px;
+        margin-left: 2rem;
     }
 
     /*---- tiene imagen pequena */
