--- a/styles/css/home/pdp/vtex.flex-layout.css
+++ b/styles/css/home/pdp/vtex.flex-layout.css
@@ -1,22 +1,17 @@
 .flexRow--pdp__price {
-    margin-top: 20px;
+    margin-top: 16px;
 }
-
 
 .flexColChild--product__gallery {
     height: 10px;
 }
 
-
-
 .flexRowContent:nth-child(odd) {
     background-color: #ffffff;
-
 }
 
 .flexRowContent:nth-child(even) {
     background-color: #cccccc;
-
 }
 
 .flexRow--especificartion__pdp .stretchChildrenWidth {
@@ -28,7 +23,6 @@
     display: flex;
     width  : 75%;
 }
-
 
 .flexRowContent--pdp__quantity--button {
     display: flex;
@@ -51,13 +45,20 @@
     justify-content: left;
 }
 
-@media screen and (min-width: 1024px) {
+.flexRowContent--pdp__highlights {
+    gap          : 8px;
+    margin-bottom: 13px;
+    display      : flex;
+    width        : 200px;
+    margin-top   : 1rem;
+}
 
+@media screen and (min-width: 1024px) {
     .flexRow--especificartion__pdp .stretchChildrenWidth {
         display        : grid;
         justify-content: left;
-        margin-left: 5rem;
-    }    
+        margin-left    : 5rem;
+    }
 
     .flexRowContent--pdp__price {
         width: 50%;
@@ -82,4 +83,8 @@
     .flexCol--product__information--pdp {
         margin-left: -120px;
     }
+    .flexRowContent--pdp__highlights{
+        margin-top: 0;
+    }
+
 }
