feat: style login for all sign-in options as per Figma, add post-login menu with routes, style PDP image and product description

--- a/styles/css/home/pdp/vtex.product-highlights.css
+++ b/styles/css/home/pdp/vtex.product-highlights.css
@@ -26,5 +26,14 @@
     text-align   : left;
     color        : #1D2734;
 
+}
 
+@media (max-width: 767px) {
+    .productHighlightWrapper--pdp__flash-Deal {
+        margin-right: 5rem;
+    }
+
+    .flexRow--header-container-menu-desktop {
+        margin-left: 0%;
+    }
 }
