--- a/styles/css/home/plp/vtex.product-summary.css
+++ b/styles/css/home/plp/vtex.product-summary.css
@@ -1,3 +1,10 @@
 /* .description{
     background-color: blueviolet;
 } */
+.description--product-summary-description-gallery {
+    display           : -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow          : hidden;
+    text-overflow     : ellipsis;
+}
