--- a/styles/css/home/shelf-products/vtex.store-components.css
+++ b/styles/css/home/shelf-products/vtex.store-components.css
@@ -8,10 +8,10 @@
 
 }
 
-.imageElement--container-product-image-section-two {
+/* .imageElement--container-product-image-section-two {
     width     : 178px;
     height    : 140px;
     gap       : 0px;
     opacity   : 0px;
     margin-top: -5%;
-} 
+}  */
