--- a/styles/css/home/header/vtex.login.css
+++ b/styles/css/home/header/vtex.login.css
@@ -128,7 +128,7 @@
   text-transform: lowercase;
 }
 
-.facebookOptionBtn :global(.vtex-button__label) ::first-letter {
+.facebookOptionBtn :global(.vtex-button__label)::first-letter {
   text-transform: capitalize;
 }
 
@@ -171,8 +171,25 @@
 }
 
 .backButton :global(.vtex-button) {
+  display: block;
+}
+
+.backButton :global(.t-small) {
   display: none;
 }
+
+.backButton {
+  position   : absolute;
+  z-index    : 69;
+  top        : 0;
+  min-height : 58px;
+  display    : flex;
+  align-items: center;
+  viewBox    : 0 0 24 24;
+}
+
+
+
 
 .inputContainerPassword :global(.vtex-input-prefix__group) {
   width        : 368px;
@@ -194,16 +211,44 @@
   line-height: 20px;
   margin-left: 30%;
   color      : #0C2340;
+}
 
+.forgotPasswordLink::before {
+  content     : "Forgot your password?";
+  font-family : Lexend;
+  font-size   : 14px;
+  font-weight : 300;
+  line-height : 20px;
+  margin-right: 0.5rem;
+}
+
+.forgotPasswordLink::after {
+  content    : "Reset password";
+  font-family: Lexend;
+  font-size  : 14px;
+  font-weight: 300;
+  line-height: 20px;
+  color      : rgba(229, 106, 84, 1);
+}
+
+.forgotPasswordLink {
+  font-size: 0;
+  display  : flex;
 }
 
 .dontHaveAccount {
-  font-size  : 14px;
-  font-weight: 400;
-  line-height: 17.5px;
-  text-align : center;
-  color      : #0C2340;
-  margin-top : 6px;
+  font-size: 0;
+}
+
+.dontHaveAccount::after {
+  font-family : Lexend;
+  content     : "Create an account";
+  font-size   : 14px;
+  font-weight : 400;
+  line-height : 17.5px;
+  text-align  : center;
+  color       : rgba(29, 39, 52, 1);
+  padding-left: 4rem;
 }
 
 .optionsList :hover {
@@ -237,7 +282,6 @@
 .googleOptionBtn .oauthLabel {
   font-size: 0;
   display  : flex;
-
 }
 
 .googleOptionBtn .oauthLabel::before {
@@ -256,7 +300,7 @@
   text-transform: lowercase;
 }
 
-.facebookOptionBtn :global(.vtex-login-2-x-oauthLabel)::before {
+.facebookOptionBtn :global(.vtex-login-2-x-oauthLabel)::after {
   content       : "Continue with Facebook";
   white-space   : nowrap;
   font-size     : 16px;
@@ -268,11 +312,11 @@
   display  : flex;
 }
 
-.facebookOptionBtn :global(.vtex-button__label) ::before {
+.facebookOptionBtn :global(.vtex-button__label)::before {
   text-transform: capitalize;
 }
 
-.sendButton :global(.vtex-button__label) ::before {
+.sendButton :global(.vtex-button__label)::before {
   content       : "Login";
   white-space   : nowrap;
   font-size     : 16px;
@@ -284,28 +328,29 @@
   display  : flex;
 }
 
-.formLinkContainer :global(.vtex-login-2-x-forgotPasswordLink) ::before {
-  content       : "Forgot your password?  Reset password";
-  white-space   : nowrap;
-  font-size     : 16px;
-  text-transform: lowercase;
-}
 
 .content--emailAndPassword {
   width        : 423px;
   height       : 375px;
+  padding      : 0%;
   border-radius: 0px 0px 8px 8px;
   background   : #F5F4F6;
 }
 
-.formTitle {
-  font-family: Lexend;
-  font-size  : 20px;
-  font-weight: 300;
-  line-height: 22.92px;
-  text-align : center;
-
+.inputContainerEmail::before {
+  content        : "Continue with e-mail and password";
+  white-space    : nowrap;
+  display        : flex;
+  justify-content: center;
+  font-family    : Lexend;
+  font-size      : 14px;
+  font-weight    : 300;
+  line-height    : 20px;
+  color          : rgba(94, 99, 110, 1);
+  margin-bottom  : 16px;
 }
+
+
 
 .loginOptionsContainer :global(.vtex-login-2-x-formTitle) {
   margin-top: 0rem;
@@ -323,14 +368,28 @@
 }
 
 .content--beginCreatePass :global(.vtex-login-2-x-formTitle)::before {
-  content      : "RECUPERAR CLAVE";
-  white-space  : nowrap;
-  font-size    : 20px;
-  font-weight  : 300;
-  line-height  : 22.92px;
-  text-align   : center;
-  margin-left  : 5rem;
-  margin-bottom: 2rem;
+  content       : "RECUPERAR CLAVE";
+  white-space   : nowrap;
+  font-size     : 20px;
+  font-weight   : 300;
+  line-height   : 22.92px;
+  text-align    : center;
+  /* margin-left: 5rem; */
+}
+
+.content--beginCreatePass :global(.vtex-login-2-x-formTitle)::after {
+  font-size: 0;
+}
+
+.inputContainerEmail::before {
+  content    : "Receive access code by email";
+  white-space: nowrap;
+  font-family: Lexend;
+  font-size  : 14px;
+  font-weight: 300;
+  line-height: 20px;
+  text-align : center;
+  color      : rgba(94, 99, 110, 1);
 }
 
 .content--beginCreatePass .formTitle {
@@ -338,22 +397,158 @@
   display  : flex;
 }
 
+
+.formLinkContainer {
+  margin-left: -5rem;
+  margin-top : 16px;
+}
+
+
 .content--recoveryPassword {
-  width        : 423px;
-  height       : 343px;
-  border-radius: 0px 0px 8px 8px;
-  background   : #F5F4F6;
+  width           : 423px;
+  /* height       : 343px; */
+  height          : 395px;
+  border-radius   : 0px 0px 8px 8px;
+  background      : #F5F4F6;
 
 }
-.content--recoveryPassword :global(.vtex-login-2-x-inputContainerAccessCode){
+
+.formFooter {
+  border: 0;
+}
+
+.content--recoveryPassword :global(.vtex-login-2-x-inputContainerAccessCode) {
   display: none;
 }
-:global(.vtex-login-2-x-emailVerification .vtex-login-2-x-formTitle){
-  content       : "RESET YOUR PASSWORD";
-  white-space   : nowrap;
-  font-size     : 16px;
+
+
+
+.forgotPasswordForm :global(.vtex-login-2-x-formTitle)::before {
+  content    : "RESET YOUR PASSWORD";
+  font-family: Lexend;
+  font-size  : 20px;
+  font-weight: 300;
+  line-height: 22.92px;
+  text-align : center;
 }
-/* .content--beginCreatePass .formTitle {
+
+.forgotPasswordForm :global(.vtex-login-2-x-formTitle) {
+  font-size : 0;
+  /* display: flex; */
+}
+
+.forgotPasswordForm :global(.vtex-login-2-x-formTitle)::after {
+  content    : "Create a new password";
+  font-family: Lexend;
+  font-size  : 14px;
+  font-weight: 300;
+  line-height: 20px;
+  text-align : center;
+  color      : rgba(94, 99, 110, 1);
+}
+
+.formSubtitle {
   font-size: 0;
-  display  : flex;
-} */
+}
+
+.forgotPasswordForm :global(.flex) {
+  color: rgba(94, 99, 110, 1);
+}
+
+.codeConfirmation :global(.vtex-login-2-x-formTitle)::after {
+  content    : "VERIFY YOUR E-MAIL";
+  font-family: Lexend;
+  font-size  : 14px;
+  font-weight: 300;
+  line-height: 20px;
+  text-align : center;
+}
+
+.codeConfirmation :global(.vtex-login-2-x-formTitle) {
+  font-size: 0;
+}
+
+.content--codeConfirmation {
+  background: rgba(245, 244, 246, 1);
+
+}
+
+.content--emailVerification {
+  background: rgba(245, 244, 246, 1);
+}
+
+.accountOptionsSectionTitle {
+  display        : flex;
+  justify-content: center;
+  margin-bottom  : 24px;
+}
+
+
+.contentFormVisible :global(.c-muted-1) {
+  width          : 368px;
+  height         : 48px;
+  padding        : 10px;
+  gap            : 10px;
+  border-radius  : 40px;
+  margin-bottom  : 0.5rem;
+  display        : flex;
+  justify-content: center;
+  font-family    : Lexend;
+  font-size      : 14px;
+  font-weight    : 400;
+  line-height    : 17.5px;
+  border         : 1px solid rgba(29, 39, 52, 1);
+  color          : rgba(29, 39, 52, 1);
+  /* display        : none; */
+
+
+}
+
+.contentFormVisible :global(.c-muted-1):hover {
+  background: rgba(29, 39, 52, 1);
+  color     : white;
+}
+
+.contentFormVisible :global(.vtex-login-2-x-logoutButton)::after {
+  content    : "Log out";
+  font-family: Lexend;
+  font-size  : 14px;
+  font-weight: 400;
+  line-height: 17.5px;
+  color      : rgba(227, 22, 22, 1);
+}
+
+
+.contentFormVisible :global(.vtex-login-2-x-logoutButton) {
+  font-size: 0;
+}
+
+.content--accountOptions {
+  background: rgba(245, 244, 246, 1);
+}
+
+.accountOptionsSectionTitle::after {
+  content    : "MY ACCOUNT";
+  font-family: Lexend;
+  font-size  : 20px;
+  font-weight: 300;
+  line-height: 22.92px;
+  text-align : center;
+}
+
+.accountOptionsSectionTitle {
+  font-size: 0px;
+}
+
+.emailVerification :global(.vtex-login-2-x-formTitle) {
+  display: grid;
+}
+
+.inputContainerAccessCode :gloabl(.vtex-styleguide-9-x-input) {
+  font-family: Lexend;
+  font-size  : 14px;
+  font-weight: 400;
+  line-height: 17.5px;
+  text-align : center;
+
+}
