--- a/styles/css/home/shelf-products/vtex.product-price.css
+++ b/styles/css/home/shelf-products/vtex.product-price.css
@@ -5,7 +5,7 @@
     gap             : 10px;
     border-radius   : 4px;
     border          : 1px;
-    background-color: black;
+    background      : rgba(29, 39, 52, 1);
     color           : white;
 
 }
