style: update styles for minicart delete icon and login back icon, rename components for better clarity

--- a/styles/css/home/header/vtex.flex-layout.css
+++ b/styles/css/home/header/vtex.flex-layout.css
@@ -92,3 +92,7 @@
 .flexRowContent--header-container-menu-desktop :hover {
     text-decoration-line: underline
 }
+
+.flexRow--header-container-menu-desktop-section-one-left{
+    min-width: 410px;
+}
