--- a/styles/css/home/plp/vtex.flex-layout.css
+++ b/styles/css/home/plp/vtex.flex-layout.css
@@ -25,7 +25,7 @@
 }
 
 .flexCol--sort__options :global(.vtex-search-result-3-x-orderByButton) {
-    width        : 170px;
+    min-width    : 170px;
     height       : 40px;
     padding      : 14px 12px 14px 12px;
     border-radius: 40px;
@@ -56,7 +56,7 @@
     /* margin-left        : 10px; */
     padding               : 0%;
     margin-right          : 0;
- 
+
 }
 
 .flexCol--shelf__image--gallery {
