--- a/styles/css/home/header/vtex.mega-menu.css
+++ b/styles/css/home/header/vtex.mega-menu.css
@@ -14,6 +14,7 @@
     font-size  : 12px;
     line-height: 15px;
     font-weight: 300;
+    margin-top : 1.3rem;
 
 }
 
@@ -63,3 +64,19 @@
     scrollbar-width : none;
 }
 
+.menuContainerNav::after {
+    content         : '';
+    position        : fixed;
+    width           : 100vw;
+    height          : 100vh;
+    top             : 80px;
+    left            : 0;
+    right           : 0;
+    bottom          : 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index         : -1;
+}
+
+.menuContainer {
+    background: white;
+}
