--- a/styles/css/home/shelf-products/vtex.flex-layout.css
+++ b/styles/css/home/shelf-products/vtex.flex-layout.css
@@ -38,7 +38,7 @@
 /*------------tablet---------------*/
 @media (min-width: 640px) and (max-width: 1024px) {
   .flexRow--header-container-menu-desktop {
-    overflow   : hidden;
+    overflow   : auto;
     margin-left: 0%;
   } 
 }
